--- a/ProyectoFinal_RocioMalaga/BackEnd/src/main/resources/application.properties
+++ b/ProyectoFinal_RocioMalaga/BackEnd/src/main/resources/application.properties
@@ -1,8 +1,14 @@
- spring.jpa.hibernate.ddl-auto=update
- spring.datasource.url=jdbc:mysql://localhost:3306/backendmgb?useSSL=false&serverTimezone=UTC
- spring.datasource.username=root
- spring.datasource.password=
- spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#Ambientes de prueba
+#spring.datasource.url=jdbc:mysql://localhost:3306/backendmgb?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
+
+#Ambientes de produccion
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.url=jdbc:mysql://uztpo19m4allzerf:8lU6C5RwMzPs54UPY4eG@be9thbbmlj33fiuichz5-mysql.services.clever-cloud.com:3306/be9thbbmlj33fiuichz5
+spring.datasource.username=be9thbbmlj33fiuichz5
+spring.datasource.password=8lU6C5RwMzPs54UPY4eG
 
 #JWT
 jwt.secret = secret
